k8s/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: event-management-app
  labels:
    app: event-management
    tier: backend
spec:
  replicas: 1 # Tạm thời giảm xuống 1 để phù hợp với cluster capacity
  selector:
    matchLabels:
      app: event-management
      tier: backend
  template:
    metadata:
      labels:
        app: event-management
        tier: backend
    spec:
      containers:
        - name: backend-container
          image: asia-southeast1-docker.pkg.dev/[PROJECT_ID]/event-management-docker-repo/be-event-management:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m"

          startupProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 60
            periodSeconds: 10
            initialDelaySeconds: 30

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: event-management-app
spec:
  type: ClusterIP
  selector:
    app: event-management
    tier: backend
  ports:
    - port: 8080
      targetPort: 8080
