k8s/03-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  namespace: event-management-app
  labels:
    app: event-management
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-management
      tier: frontend
  template:
    metadata:
      labels:
        app: event-management
        tier: frontend
    spec:
      containers:
        - name: frontend-container
          image: asia-southeast1-docker.pkg.dev/[PROJECT_ID]/event-management-docker-repo/fe-event-management:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80

          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: event-management-app
spec:
  type: ClusterIP
  selector:
    app: event-management
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
